[package]
name = "gst-protectbuffer"
authors = [ "arcnmx" ]
edition = "2018"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/arcnmx/gst-protectbuffer"
description = "Buffer protection"

[dependencies]
glib = "^0.10.3"
gstreamer = "^0.16.7"
gstreamer-base = "^0.16.5"
once_cell = "^1.8.0"

[lib]
name = "gstprotectbuffer"
crate-type = [ "cdylib" ]
